[project]
name = "peewee-migrate"
version = "1.14.3"
description = "Support for migrations in Peewee ORM"
authors = [{ name = "Kirill Klenov", email = "horneds@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.rst"
license = "MIT"
keywords = ["peewee", "migrations", "orm"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dependencies = ["peewee", "click"]

[project.urls]
Homepage = "https://github.com/klen/peewee_migrate"
Repository = "https://github.com/klen/peewee_migrate"

[project.scripts]
pw_migrate = "peewee_migrate.cli:cli"
pw-migrate = "peewee_migrate.cli:cli"

[dependency-groups]
dev = ["pre-commit", "psycopg2-binary", "pytest", "ruff"]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = "peewee_migrate"
module-root = ""

[tool.ruff]
include = ["peewee_migrate", "tests"]
line-length = 100
target-version = "py310"
select = ["ALL"]
ignore = ["ANN", "ARG", "COM", "D", "N", "UP", "S", "SLF", "INP001", "PLR2004"]

[tool.pytest.ini_options]
addopts = "-svx"

[tool.pyrefly]
project-includes = ["peewee_migrate"]
project-excludes = ["tests", "pyproject.toml"]

[tool.bumpversion]
current_version = "1.14.3"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
